[Task-3]:add some tests to service layer